--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -4,6 +4,12 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>{{ folder }}</ion-title>
+
+    <ion-buttons slot="secondary">
+      <ion-button *ngFor="let p of labels" fill="clear">
+        <ion-icon [ios]="p.icon + '-outline'" [md]="p.icon + '-outline'"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
