--- a/src/app/views/song/song.component.html
+++ b/src/app/views/song/song.component.html
@@ -1,3 +1,41 @@
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>{{ 'folder' }}</ion-title>
+    <ion-buttons slot="secondary">
+      <ion-button>
+        <ion-icon
+          [ios]="'swap-vertical-outline'"
+          [md]="'swap-vertical-outline'"></ion-icon>
+      </ion-button>
+      <ion-button>
+        <ion-icon
+          [ios]="'play-outline'"
+          [md]="'play-outline'"></ion-icon>
+      </ion-button>
+      <ion-button>
+        <ion-icon
+          [ios]="'pause-outline'"
+          [md]="'pause-outline'"></ion-icon>
+      </ion-button>
+
+      <ion-button>
+        <ion-icon
+          [ios]="'reload-outline'"
+          [md]="'reload-outline'"></ion-icon>
+      </ion-button>
+
+      <ion-button>
+        <ion-icon
+          [ios]="'ellipsis-vertical-outline'"
+          [md]="'ellipsis-vertical-outline'"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
 <pre *ngIf="song$ | async as song">
   {{song | json}}
 </pre>
