--- a/src/app/views/song/song.component.html
+++ b/src/app/views/song/song.component.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>{{ 'folder' }}</ion-title>
+    <ion-title *ngIf="song$ | async as song">{{ song.title }}</ion-title>
     <ion-buttons slot="secondary">
       <ion-button>
         <ion-icon
