--- a/src/app/views/songs/songs.component.html
+++ b/src/app/views/songs/songs.component.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>{{ 'folder' }}</ion-title>
+    <ion-title *ngIf="artist$ | async as artist">{{artist.name}}</ion-title>
     <ion-buttons slot="secondary">
       <ion-button fill="clear">
         <ion-icon
