Show search when clicked

--- a/src/app/views/songs/songs.component.html
+++ b/src/app/views/songs/songs.component.html
@@ -20,7 +20,11 @@
 
     <!-- Nav buttons -->
     <ion-buttons slot="secondary">
-      <ion-button fill="clear">
+
+      <ion-button
+        (click)="showSearch = true;"
+        *ngIf="!showSearch"
+        fill="clear">
         <ion-icon
           [ios]="'search-outline'"
           [md]="'search-outline'"
