Hide title if search enable

--- a/src/app/views/songs/songs.component.html
+++ b/src/app/views/songs/songs.component.html
@@ -4,7 +4,8 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title *ngIf="artist$ | async as artist">{{artist.name}}</ion-title>
+
+    <ion-title *ngIf="!showSearch && artist$ | async as artist">{{artist.name}}</ion-title>
 
     <!-- Search -->
     <ion-toolbar *ngIf="showSearch">
