Add nav icons for create song page

--- a/src/app/views/song-create/song-create.component.html
+++ b/src/app/views/song-create/song-create.component.html
@@ -1,3 +1,23 @@
-<p>
-  song-create works!
-</p>
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <!-- Menu -->
+    <ion-buttons slot="start">
+      <ion-button fill="clear">
+        <ion-icon
+          [ios]="'arrow-back'"
+          [md]="'arrow-back'"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
+    <!-- Nav buttons -->
+    <ion-buttons slot="secondary">
+      <ion-button fill="clear">
+        <ion-icon
+          [ios]="'save'"
+          [md]="'save'"></ion-icon>
+      </ion-button>
+
+    </ion-buttons>
+
+  </ion-toolbar>
+</ion-header>
