Add return button func

--- a/src/app/views/song-create/song-create.component.html
+++ b/src/app/views/song-create/song-create.component.html
@@ -2,7 +2,10 @@
   <ion-toolbar>
     <!-- Menu -->
     <ion-buttons slot="start">
-      <ion-button fill="clear">
+      <ion-button
+        [routerLink]="['/songs', artistId]"
+        fill="clear
+">
         <ion-icon
           [ios]="'arrow-back'"
           [md]="'arrow-back'"></ion-icon>
