Add method to save form

--- a/src/app/views/song-create/song-create.component.html
+++ b/src/app/views/song-create/song-create.component.html
@@ -14,7 +14,9 @@
 
     <!-- Nav buttons -->
     <ion-buttons slot="secondary">
-      <ion-button fill="clear">
+      <ion-button
+        (click)="save()"
+        fill="clear">
         <ion-icon
           [ios]="'save'"
           [md]="'save'"></ion-icon>
