Move down app c

--- a/src/app/views/common/app/app.component.scss
+++ b/src/app/views/common/app/app.component.scss
@@ -1,3 +1,11 @@
+/*!
+ * Guitar songbook project
+ *
+ * @author Rustam Mukhametshin <https://github.com/iproman>
+ * @link https://github.com/iproman
+ * @copyright Copyright (c) Rustam Mukhametshin, LLC, 2021
+ */
+
 ion-menu ion-content {
   --background: var(--ion-item-background, var(--ion-background-color, #fff));
 }
