--- a/src/app/views/artists/artists/artists.component.html
+++ b/src/app/views/artists/artists/artists.component.html
@@ -1,3 +1,11 @@
+<!--
+  ~ Guitar songbook project
+  ~
+  ~ @author Rustam Mukhametshin <https://github.com/iproman>
+  ~ @link https://github.com/iproman
+  ~ @copyright Copyright (c) Rustam Mukhametshin, LLC, 2021
+  -->
+
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
