Add button for create artist

--- a/src/app/views/artists/artists/artists.component.html
+++ b/src/app/views/artists/artists/artists.component.html
@@ -14,6 +14,16 @@
     <ion-title>Guitar songs</ion-title>
 
     <ion-buttons slot="secondary">
+
+      <ion-button
+        [routerLink]="['/artists/create']"
+        fill="clear">
+        <ion-icon
+          [ios]="'add-outline'"
+          [md]="'add-outline'"
+        ></ion-icon>
+      </ion-button>
+
       <ion-button *ngFor="let p of labels" fill="clear">
         <ion-icon [ios]="p.icon + '-outline'" [md]="p.icon + '-outline'"></ion-icon>
       </ion-button>
