Fix not showing name

--- a/src/app/views/songs/song-create/song-create.component.html
+++ b/src/app/views/songs/song-create/song-create.component.html
@@ -45,7 +45,7 @@
           <ion-label position="stacked">Name</ion-label>
           <ion-input
             clearInput
-            formControlName="name"
+            formControlName="title"
             type="text"
           ></ion-input>
         </ion-item>
