--- a/src/app/views/common/app/app.component.html
+++ b/src/app/views/common/app/app.component.html
@@ -19,4 +19,4 @@
 
   </ion-split-pane>
 </ion-app>
-<ion-progress-bar *ngIf="loaderService.loader" type="indeterminate"></ion-progress-bar>
+<app-loader></app-loader>
