Disable btn if form invalid

--- a/src/app/views/songs/song-create/song-create.component.html
+++ b/src/app/views/songs/song-create/song-create.component.html
@@ -24,7 +24,9 @@
     <ion-buttons slot="secondary">
       <ion-button
         (click)="save()"
-        fill="clear">
+        [disabled]="songForm.invalid"
+        fill="clear"
+      >
         <ion-icon
           [ios]="'save'"
           [md]="'save'"></ion-icon>
