--- a/src/app/views/songs/song-create/song-create.component.html
+++ b/src/app/views/songs/song-create/song-create.component.html
@@ -26,6 +26,7 @@
         (click)="save()"
         [disabled]="songForm.invalid"
         fill="clear"
+        id="save"
       >
         <ion-icon
           [ios]="'save'"
