--- a/src/app/views/songs/songs/songs.component.html
+++ b/src/app/views/songs/songs/songs.component.html
@@ -43,6 +43,7 @@
       <ion-button
         *ngIf="!showSearch && artist$ | async as artist"
         [routerLink]="['/songs/create', artist.id]"
+        id="addSong"
         fill="clear">
         <ion-icon
           [ios]="'add-outline'"
