Addition styles for hidden-inputs

--- a/src/app/views/songs/song-create/song-create.component.html
+++ b/src/app/views/songs/song-create/song-create.component.html
@@ -42,7 +42,7 @@
   <ion-card style="--color: black;">
     <ion-card-content>
 
-      <form [formGroup]="songForm">
+      <form [formGroup]="songForm" [ngClass]="{'hidden-inputs': isLyrics}">
 
         <ion-item>
           <ion-label position="stacked">Name</ion-label>
